--- a/iframe.html
+++ b/iframe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>アドレス変換ページ（iframe表示）</title>
+    <title>アドレス変換ページ（iframe表示1）</title>
     <style>
         body {
             display: flex;
@@ -107,11 +107,11 @@
         });
 
         //アドレスをリセット
-        function resetAdrress(){
+        function resetAdrress() {
             inputField.value="";
             message.textContent = "クリップボードのアドレスをここに貼り付けてください”;
             message.style.color = "#333";
-        }
+        };
     </script>
 </body>
 </html>
